2016-11-20 The-Michael-R <The-Michael-R@users.noreply.github.com>
	* nuimo.h:
	Changed: Added new parameter to nuimo_set_led to select transition mode
	Added: Added new function to select predefined patterns (nuimo_set_icon

	* nuimo.c (nuimo_set_led):
	Changed: Added new parameter to select transition mode (new in Nuimo FW 17.11.2016)

	* nuimo.c (nuimo_set_icon):
	Added: New new function to select predefined pattern (new in Nuimo FW 17.11.2016)

	* example.c (my_cb_function):
	Changed: adapted new Nuimo functionality, see changes in nuimo.h/nuimo.c


2016-10-09 The-Michael-R <The-Michael-R@users.noreply.github.com>
	* nuimo.h:
	Changed: Added new parameter of user call-back function

	* nuimo.c (nuimo_status_s):
	Changed: Changed from u??? to unsigned ???
	Changed: Added new parameter of user call-back function

	* nuimo.c (cb_change_val_notify):
	Changed: BUTTON_PRESS reports now changes in the dir-parameter not value
	Changed: Added new parameter of user call-back function

	* nuimo.c (connect_nuimo):
	Changed: Added new parameter of user call-back function

	* nuimo.c (nuimo_init_cb_function):
	Changed: Added new parameter of user call-back function

	* example.c (my_cb_function):
	Changed: Changed from u??? to unsigned ???
	Changed: Added new parameter of user call-back function (not used in example)
	Changed: BUTTON_PRESS reports now changes in the dir-parameter not value

	* example.c (main):
	Changed: Added new parameter of user call-back function (not used in example)

	* example.h:
	Changed: Changed from u??? to unsigned ???
	Changed: Added new parameter of user call-back function (not used in example)


2016-10-04 The-Michael-R <The-Michael-R@users.noreply.github.com>
	* nuimo.c (nuimo_init_bt):
	Added: Return EXIT_FAILURE if no BT-Adapter was found.
	Changed: Moved get_characteristics() in own loop to make sure the order of items in ob_list does not matter

	* nuimo.c (cb_change_val_notify):