@@ -1,4 +1,5 @@
 *.[oa]
 *~
+.#*
 example
 docs/
