@@ -66,6 +66,10 @@ enum nuimo_swipe {
   NUIMO_TOUCH_RIGHT,  
   NUIMO_TOUCH_TOP,    
   NUIMO_TOUCH_BOTTOM,
+  NUIMO_LONG_TOUCH_LEFT,   
+  NUIMO_LONG_TOUCH_RIGHT,  
+  NUIMO_LONG_TOUCH_TOP,    
+  NUIMO_LONG_TOUCH_BOTTOM,  
   NUIMO_SWIPE_LEN,     
 };
 /** @} */
